--- a/index2.html
+++ b/index2.html
@@ -1,2 +1,2 @@
 <p>this is a new repo for test, thanks</p>
-<p> this is new feature in feature1 branch</p>
+<p> this is new feature in feature1 branch (button) </p>
